force-app/main/default/objects/IFS_character_codes__c/IFS_character_codes__c.object-meta.xml
<CustomObject>
    <label>IFS character codes</label>
    <nameField>
        <label>IFS character codes</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>IFS character codes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>