force-app/main/default/objects/IFS_character_codes__c/fields/Attribute_Code__c.field-meta.xml
<CustomField>
    <fullName>Attribute_Code__c</fullName>
    <label>Attribute Code</label>
    <length>255</length>
    <type>Text</type>
</CustomField>