force-app/main/default/objects/IFS_character_codes__c/fields/Element__c.field-meta.xml
<CustomField>
    <fullName>Element__c</fullName>
    <label>Element</label>
    <length>255</length>
    <type>Text</type>
</CustomField>