force-app/main/default/objects/IFS_character_codes__c/fields/Integration_Notes__c.field-meta.xml
<CustomField>
    <fullName>Integration_Notes__c</fullName>
    <label>Integration Notes</label>
    <type>TextArea</type>
</CustomField>