force-app/main/default/objects/IFS_character_codes__c/fields/Interface_to_IFS_Attributes__c.field-meta.xml
<CustomField>
    <fullName>Interface_to_IFS_Attributes__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Interface to IFS Attributes</label>
    <type>Checkbox</type>
</CustomField>